  - New Config Option: global_town_settings.outlaw_teleport_world
    - default: "" 
    - What world do you want the outlaw teleported to if they aren't part of a town and don't have a bedspawn outside of the town they are outlawed in.
    - They will go to the listed world's spawn. 
    - If blank, they will go to the spawnpoint of the world the town is in.
  - Area Claiming and AreaSelectionUtil fix-up, with PR #4441.
    - Massively improves the /t claim auto|rect|circle auto claiming options.
      - Circles and Square shaped claims are now made in an outward-spiral shape, leading to centered claims.
    - /t claim {rect|circle} # claims now have their # downsized to a radius which will allow for a full-ring of claims.
      - Makes for perfect circle/square claiming.
    - Closes #4427.
    - Closes #4395.
  - Add SQL Flags to Towny, courtesy of 0xBit-MC with PR #4450 (First-Time Contributor!)
    - Closes #4446.
  - New Config Option: plugin.database.sql.flags
    - Default: "?verifyServerCertificate=false&useSSL=false&useUnicode=true&characterEncoding=utf-8"
    - Allows for finer-grain editing of what flags will be used for your mysql connection.
  - Italian.yml updated, courtesy of Leonardo_DGS with PR #4451.
  - Don't delete town inside of `Resident#removeTown()`, courtesy of silverwolfg11 with PR #4457.
  - Add Townblock To New Action Events with PR #4455.
  - API: TownyBurnEvent.
    - Allows for Towny, and then Towny's war systems and other plugins to decide if a block can ignite or burn.
  - Fix sticky pistons retracting on the edge of plots.
    - Closes #4456.
  - Add Dragon Fireball Damage handling.
    - Closes #4100.
  - Switch Explosive Fireworks to be handled like PVP damage when it is dealt to players, instead of Explosive Damage.
    - Makes it possible to use them on crossbows in a pvp setting without needing explosions forced on.
0.96.3.8
  - Update bstats metrics.
  - Fix javadoc.