@@ -2,6 +2,7 @@ package com.palmergames.bukkit.towny.event.actions;
 
 import org.bukkit.Location;
 import org.bukkit.Material;
+import org.bukkit.block.Block;
 import org.bukkit.entity.Player;
 import org.bukkit.event.HandlerList;
 
@@ -20,6 +21,7 @@ import com.palmergames.bukkit.towny.object.TownBlock;
 public class TownySwitchEvent extends TownyActionEvent {
 
 	private static final HandlerList handlers = new HandlerList();
+	private final Block block;
 
 	/**
 	 * Switch event thrown when a player attempts to use a block that is in the
@@ -34,16 +36,22 @@ public class TownySwitchEvent extends TownyActionEvent {
 	 * ignorecancelled=true in order to get only events which Towny will otherwise
 	 * allow.
 	 * 
-	 * @param player    involved in the itemuse event.
-	 * @param loc       location of the block which has an item being used on it.
-	 * @param mat       material of the item being used.
+	 * @param player    involved in the switch event.
+	 * @param loc       location of the block which is being used.
+	 * @param mat       material of the block being used.
+	 * @param block     block being used.
 	 * @param townblock - TownBlock or null if in the wilderness.
 	 * @param cancelled true if Towny has already determined this will be cancelled.
 	 */
-	public TownySwitchEvent(Player player, Location loc, Material mat, TownBlock townblock, boolean cancelled) {
+	public TownySwitchEvent(Player player, Location loc, Material mat, Block block, TownBlock townblock, boolean cancelled) {
 		super(player, loc, mat, townblock, cancelled);
+		this.block = block;
 	}
 
+	public Block getBlock() {
+		return block;
+	}
+	
 	public static HandlerList getHandlerList() {
 		return handlers;
 	}
